--- a/Styles/app.css
+++ b/Styles/app.css
@@ -40,6 +40,35 @@ nav a, footer p
     font-family: 'Pacifico', cursive;
 }
 
+.card
+{
+    width: 100%;
+    border-radius: 20px;
+    transition: 1s;
+}
+
+.card:hover
+{
+    transform: scale(1.05);
+    transition: 1s;
+}
+
+@media screen and (min-width: 768px)
+{
+    .card
+    {
+        width: 60%;
+    }    
+}
+
+@media screen and (min-width: 1024px)
+{
+    .card
+    {
+        width: 40%;
+    }    
+}
+
 
 
 
